--- a/index.html
+++ b/index.html
@@ -295,9 +295,11 @@
                       </div>
                   </div>
               </div>
+              <p class="fs-5">More information about can be found <a class="text-decoration-none" href="">here.</a></p>
               </div>
             </div>
           </div>
+          
       <!--Advertisement-->
           <div class=" d-none d-md-block  col-md-3 ">
             <div class="d-flex flex-column mb-3  text-center">
@@ -367,7 +369,9 @@
      
       </main>
 
-  
+      <div class="py-5" style="background-color: #f2f2f2;">
+
+      </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
